Fix: H1 Align

--- a/style.css
+++ b/style.css
@@ -12,11 +12,10 @@ body {
     flex-direction: column;
 }
 
-#frente {
-    margin-top: 10px;
-}
-
 h1 {
+    margin-top: 15px;
+    margin-bottom: -10px;
+
     font-size: 20px;
     display: flex;
     justify-content: center;
@@ -146,7 +145,6 @@ footer {
     h1 {
         display: flex;
         align-items: center;
-        margin-left: 10px;
     }
   }
 
